simplified menu and ui for blockchain use

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="See if you can solve this classic puzzle game.">
   <meta name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0">
 
-  <title>The Cube - A Rubik's Cube Game</title>
+  <title>The Cube</title>
   <meta property="og:description" content="See if you can solve this classic puzzle game."/>
   <meta property="og:image" content="assets/icons/meta-image.png"/>
   <meta property="og:site_name" content="The Cube - A Rubik's Cube Game"/>
@@ -63,10 +63,7 @@
         <span>THE</span>
         <span>CUBE</span>
       </h1>
-      <div class="text text--note">
-        Double tap to start
-      </div>
-      <div class="text text--timer">
+      <div class="text text--timer" style="display: none;">
         0:00
       </div>
       <div class="text text--complete">
